feat: Add code generation for Spring components including Controller, Entity, Repository, Service, and SQL migration
- Implemented ControllerGenerator to create REST controllers with CRUD operations.
- Developed EntityGenerator for generating JPA entity classes with fields, getters, setters, and utility methods.
- Created RepositoryGenerator to generate Spring Data JPA repository interfaces with custom query methods.
- Added ServiceGenerator for generating service interfaces and implementations with CRUD methods and custom queries.
- Introduced SqlMigrationGenerator for creating Liquibase SQL migration files based on entity configuration.
- Implemented YamlConfigParser for parsing YAML configuration files and validating the configuration.
- Added unit tests for configuration validation and YAML parsing.
- Created integration tests for the complete code generation flow, verifying generated files and directories.

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -120,6 +120,38 @@
                             </resources>
                         </configuration>
                     </execution>
+                </executions>            </plugin>
+
+            <!-- Build Helper Plugin to add generated sources -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <executions>
+                    <execution>
+                        <id>add-generated-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>add-generated-test-source</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-test-sources/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
