--- a/example/pom.xml
+++ b/example/pom.xml
@@ -77,11 +77,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-
-            <!-- Code Generator Plugin -->
+            </plugin>            <!-- Code Generator Plugin -->
             <plugin>
-                <groupId>com.example</groupId>
+                <groupId>com.luanvv.codegen.spring</groupId>
                 <artifactId>spring-boot-code-generator</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
                 <executions>
@@ -93,66 +91,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>src/main/resources/codegen.yaml</configFile>
-                </configuration>            </plugin>
-
-            <!-- Maven Resources Plugin to include generated resources -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.1</version>
-                <executions>
-                    <execution>
-                        <id>copy-generated-resources</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${project.build.directory}/generated-resources</directory>
-                                    <includes>
-                                        <include>**/*</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>            </plugin>
-
-            <!-- Build Helper Plugin to add generated sources -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.4.0</version>
-                <executions>
-                    <execution>
-                        <id>add-generated-source</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${project.build.directory}/generated-sources/java</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>add-generated-test-source</id>
-                        <phase>generate-test-sources</phase>
-                        <goals>
-                            <goal>add-test-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${project.build.directory}/generated-test-sources/java</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
+                    <configFile>src/main/resources/codegen.yaml</configFile>                </configuration>
             </plugin>
 
             <!-- Maven Compiler Plugin -->
