feat: Implement Custom User Controller and Service with Extended Functionality
- Added CustomUserController to extend base user functionalities with custom endpoints:
  - Fetch active users
  - Deactivate and activate users
  - Retrieve user statistics
  - Search users by name

- Introduced CustomUserServiceImpl to provide business logic:
  - Override create and update methods for validation and timestamp management
  - Implement methods to find active users, deactivate, and activate users
  - Added user statistics calculation

- Created YAML configuration files for Product and User entities, defining fields and SQL migration scripts.

- Removed legacy SQL migration file for user table and replaced it with YAML-based configuration.

- Enhanced code generation framework to support base and extensible service and controller implementations, ensuring proper transaction management and extensibility.

- Updated generator classes to include override behavior for file generation, allowing for skipping existing files or forcing regeneration.

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -91,7 +91,11 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>src/main/resources/codegen.yaml</configFile>                </configuration>
+                    <configFiles>
+                        <configFile>src/main/resources/codegen/user_accounts.yaml</configFile>
+                        <configFile>src/main/resources/codegen/products.yaml</configFile>
+                    </configFiles>
+                </configuration>
             </plugin>
 
             <!-- Maven Compiler Plugin -->
